<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llStart"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/margin16dp"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize14"
        tools:text="Version 2023.02.04" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvGameTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/game_title"
        android:textColor="@color/black"
        android:textSize="60sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bStartGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin16dp"
        android:layout_marginTop="@dimen/margin16dp"
        android:layout_marginEnd="@dimen/margin16dp"
        android:backgroundTint="@color/black"
        android:padding="@dimen/margin16dp"
        android:text="@string/new_game"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize22"
        android:textStyle="bold" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/margin16dp"
        android:paddingEnd="@dimen/margin16dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bOpenScores"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:paddingTop="@dimen/margin16dp"
            android:paddingBottom="@dimen/margin16dp"
            android:text="@string/scores"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize18"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ivSettings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:paddingTop="@dimen/margin16dp"
            android:paddingBottom="@dimen/margin16dp"
            android:text="@string/setting"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize18"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPolicy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/margin16dp"
        android:text="@string/privacy_policy_title"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize14" />
</androidx.appcompat.widget.LinearLayoutCompat>
