<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llScores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/shape_scores"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvScoresTitle"
            style="@style/text_view_style"
            android:text="@string/scores"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/scoresTitleSize" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvFirstScore"
            style="@style/text_view_style"
            android:text="@string/initial_score"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/midTextSize"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSecondScore"
            style="@style/text_view_style"
            android:text="@string/initial_score"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/midTextSize" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvThirdScore"
            style="@style/text_view_style"
            android:text="@string/initial_score"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/midTextSize" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ivShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen48dp"
        android:background="@drawable/button_circle"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/shareButtonPadding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llScores"
        app:srcCompat="@drawable/ic_share" />

</androidx.constraintlayout.widget.ConstraintLayout>
